<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tendero.Inicio_sesion.is_actiniciarsesionprincipal"
    android:orientation="vertical"
    android:layout_margin="@dimen/activity_margin"
    android:gravity="center_horizontal">


    <ImageView
        android:layout_width="155dp"
        android:layout_height="85dp"
        android:background="@color/grey_800"
        android:layout_marginTop="71dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/is_varstriniciariesionprincipal1"
        android:layout_marginTop="36dp"
        android:textColor="@color/blackPrimary"/>

    <Button
        android:id="@+id/is_ispbtnfacebook"
        android:layout_width="@dimen/btn_type01_width"
        android:layout_height="wrap_content"
        android:text="@string/is_varstriniciariesionprincipal2"
        android:layout_marginTop="35dp"
        android:background="@color/blue_600"
        android:textColor="@color/whitePrimary"/>

    <Button
        android:id="@+id/is_ispbtngoogle"
        android:layout_width="@dimen/btn_type01_width"
        android:layout_height="wrap_content"
        android:text="@string/is_varstriniciariesionprincipal3"
        android:layout_marginTop="16dp"
        android:background="@color/blue_600"
        android:textColor="@color/whitePrimary"/>


</LinearLayout>