<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="@dimen/activity_margin"
    tools:context=".tendero.Inicio_sesion.ui.Mis_ordenes.mio_frgdetalleproducto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mio_varstrdetalleproducto1"
            android:textAllCaps="false"
            android:textColor="@color/blackPrimary"
            android:paddingTop="10dp"/>

        <TextView
            android:id="@+id/txt_num_pedido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="00000001"
            android:layout_marginLeft="10dp"
            android:textColor="@color/blackPrimary"
            android:paddingTop="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:gravity="center"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/mio_dptxtproductos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mio_varstrdetalleproducto2"

            android:textColor="@color/blackPrimary" />
        <TextView
            android:id="@+id/mio_dptxtcontadorproductos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="(2)"

            android:textColor="@color/blackPrimary" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mio_rclvlistaproductos"
            ></androidx.recyclerview.widget.RecyclerView>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/mio_dpbtncancelarorden"
            android:layout_width="@dimen/btn_type03_width"
            android:layout_height="wrap_content"
            android:background="@color/redPrimary"
            android:text="@string/mio_varstrdetalleproducto6"
            android:textAllCaps="false"
            android:radius="10dp"/>

        <Button
            android:id="@+id/is_dpbtnenviar"
            android:layout_width="@dimen/btn_type03_width"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:background="@color/orangePrimary"
            android:text="@string/mio_varstrdetalleproducto7"
            android:radius="10dp"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent" />
    </LinearLayout>


</LinearLayout>