<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/activity_margin"
    tools:context=".tendero.Inicio_sesion.ui.Mis_ordenes.mio_frgmisordenesprincipal">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:padding="6dp">

            <SearchView
                android:id="@+id/mio_mopsrchvwbuscaridorden"
                android:background="@drawable/border"
                android:layout_width="365dp"
                android:layout_height="40dp"
                android:layout_marginTop="9dp"
                android:hint="@string/mio_varstrmisordenesprincipal1" />

            <Spinner
                android:id="@+id/mio_mopsrchvwordenarporestado"
                android:background="@drawable/border"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_marginTop="9dp"
                android:gravity="left"
                android:spinnerMode="dropdown"
                android:text="@string/mio_varstrmisordenesprincipal2"
                android:entries="@array/Filtro_ordenestado"
                />
            <Spinner
                android:id="@+id/mio_mopsrchvwordenarporfecha"
                android:background="@drawable/border"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_marginTop="9dp"
                android:spinnerMode="dropdown"
                android:text="@string/mio_varstrmisordenesprincipal9"
                android:entries="@array/Filtro_ordenfecha"
                />

        </LinearLayout>



        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mio_moprclvlistaproductos"
            >

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>
</ScrollView>